# metal-cpp-examples

./: CMakeLists.txt
vector_addition/: main.cpp  metal_adder.cpp  metal_adder.hpp
